crates/anodized/tests/compile_fail/spec_on_negative_trait_impl.rs
#![no_main]

use anodized::spec;

#[spec]
trait T {
    fn f(&self);
}

#[spec]
impl !T for S {}

struct S;
