crates/anodized/tests/compile_fail/spec_on_negative_trait_impl.stderr
error: The #[spec] attribute doesn't yet support this item: negative trait impl.
       If this is a problem for your use case, please open a feature
       request at https://github.com/mkovaxx/anodized/issues/new
  --> tests/compile_fail/spec_on_negative_trait_impl.rs:11:1
   |
11 | impl !T for S {}
   | ^^^^^^^^^^^^^^^^
